--- a/ApiEndpoint/ApiEndpoint.csproj
+++ b/ApiEndpoint/ApiEndpoint.csproj
@@ -1,21 +1,43 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<PackageId>ApiEndpoint</PackageId>
-		<Version>1.3.0</Version>
-		<Description>
-			Package for creating API endpoints in .NET, with support for GET, POST, PUT and DELETE methods. Supports JSON and FormData content types, as well as query string parameters, and secure API tokens.
-		</Description>
-		<Authors>!+VinZ+!</Authors>
-		<RepositoryUrl>https://github.com/dev-vinz/ApiEndpoint.NET</RepositoryUrl>
+		<!-- Target framework -->
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+
+		<!-- Package information -->
+		<PackageId>ApiEndpoint</PackageId>
+		<Version>$(Version)</Version>
+		<Authors>!+VinZ+!</Authors>
+		<Description>Package for creating API endpoints in .NET, with support for GET, POST, PUT and DELETE methods. Supports JSON and FormData content types, as well as query string parameters, and secure API tokens.</Description>
+		<PackageTags>API;Endpoint;NuGet</PackageTags>
+		<RepositoryUrl>https://github.com/dev-vinz/ApiEndpoint.NET</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/dev-vinz/ApiEndpoint.NET</PackageProjectUrl>
+
+		<!-- Package icon -->
+		<PackageIcon>ApiEndpointIcon.png</PackageIcon>
+
+		<!-- Package README -->
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+
+		<!-- Output path for CI/CD pipeline -->
+		<OutputPath>bin\Release</OutputPath>
 	</PropertyGroup>
 
+	<!-- Package references -->
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	</ItemGroup>
+
+	<!-- Icon and README files inclusion -->
+	<ItemGroup>
+		<None Include="../ApiEndpointIcon.png" Pack="true" PackagePath="ApiEndpointIcon.png" />
+		<None Include="../README.md" Pack="true" PackagePath="README.md" />
 	</ItemGroup>
 
 </Project>
