--- a/ApiEndpoint/ApiEndpoint.csproj
+++ b/ApiEndpoint/ApiEndpoint.csproj
@@ -26,7 +26,7 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 
 		<!-- Output path for CI/CD pipeline -->
-		<OutputPath>bin\Release</OutputPath>
+		<OutputPath>bin/Release</OutputPath>
 	</PropertyGroup>
 
 	<!-- Package references -->
