--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,7 +24,7 @@ jobs:
               run: dotnet restore
 
             - name: 🏗️ Build project
-              run: dotnet build --configuration Release --output ./bin/Release
+              run: dotnet build --configuration Release
 
             - name: 🔍 Check build output
               run: |
