--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,4 +1,4 @@
-name: 🚀 Build & Test Package
+name: 🧪 Build & Test
 
 on:
     push:
@@ -21,16 +21,16 @@ jobs:
                   dotnet-version: 8.0
 
             - name: 🔄 Restore dependencies
-              run: dotnet restore
+              run: dotnet restore ApiEndpoint.sln
 
-            - name: 🏗️ Build project
-              run: dotnet build --configuration Release
+            - name: 🏗️ Build solution
+              run: dotnet build ApiEndpoint.sln --configuration Release
 
             - name: 📦 Upload build artifacts
               uses: actions/upload-artifact@v3
               with:
-                  name: build-artifacts
-                  path: bin/Release/
+                  name: test-artifacts
+                  path: ApiEndpoint.Tests/bin/Release/
 
     test:
         runs-on: ubuntu-latest
@@ -44,10 +44,10 @@ jobs:
               with:
                   dotnet-version: 8.0
 
-            - name: 📦 Download build artifacts
+            - name: 📦 Download test project artifacts
               uses: actions/download-artifact@v3
               with:
-                  name: build-artifacts
+                  name: test-artifacts
 
             - name: 🧪 Run tests
               run: dotnet test --configuration Release --no-build --verbosity normal
