--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -80,6 +80,12 @@ jobs:
                   echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
                   echo "Extracted version: ${{ env.VERSION }}"
 
+            - name: 🔍 Verify downloaded files
+              run: |
+                  echo v${{ env.VERSION }}
+                    pwd
+                    ls -R ./
+
             - name: 📦 Pack package
               run: dotnet pack ApiEndpoint.csproj --configuration Release -p:Version=${{ env.VERSION }} -o ./nuget-packages
 
