Update deploy workflow

--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -92,6 +92,4 @@ jobs:
             - name: 🚀 Push package
               env:
                   GITHUB_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
-              run: dotnet nuget push ./nuget-packages/*.nupkg \
-                  --api-key $GITHUB_TOKEN \
-                  --source https://nuget.pkg.github.com/dev-vinz/index.json
+              run: dotnet nuget push ./nuget-packages/*.nupkg --api-key $GITHUB_TOKEN --source https://nuget.pkg.github.com/dev-vinz/index.json
