--- a/.github/workflows/build-test-deploy-release.yml
+++ b/.github/workflows/build-test-deploy-release.yml
@@ -1,4 +1,4 @@
-name: 🚀 Build, Test & Deploy Package
+name: 🚀 Build, Test, Deploy & Release
 
 on:
     push:
@@ -80,16 +80,48 @@ jobs:
                   echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
                   echo "Extracted version: ${{ env.VERSION }}"
 
-            - name: 🔍 Verify downloaded files
-              run: |
-                  echo v${{ env.VERSION }}
-                    pwd
-                    ls -R ./
-
             - name: 📦 Pack package
               run: dotnet pack ApiEndpoint/ApiEndpoint.csproj --configuration Release -p:Version=${{ env.VERSION }} -o ./nuget-packages
+
+            - name: 📦 Upload NuGet package as artifact
+              uses: actions/upload-artifact@v4
+              with:
+                  name: nuget-package
+                  path: ./nuget-packages/*.nupkg
 
             - name: 🚀 Push package
               env:
                   GITHUB_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
               run: dotnet nuget push ./nuget-packages/*.nupkg --api-key $GITHUB_TOKEN --source https://nuget.pkg.github.com/dev-vinz/index.json
+
+    release:
+        runs-on: ubuntu-latest
+        needs: deploy
+        steps:
+            - name: 📂 Checkout code
+              uses: actions/checkout@v3
+
+            - name: 📦 Download NuGet package artifact
+              uses: actions/download-artifact@v4
+              with:
+                  name: nuget-package
+
+            - name: 🏷️ Create GitHub Release
+              id: create-release
+              uses: actions/create-release@v1
+              with:
+                  tag_name: ${{ github.ref_name }}
+                  release_name: Release ${{ github.ref_name }}
+                  body: |
+                      ### What's Changed
+                      - Deployment and package publishing for version ${{ github.ref_name }}.
+                  draft: false
+                  prerelease: false
+
+            - name: 📤 Upload Release Asset
+              uses: actions/upload-release-asset@v1
+              with:
+                  upload_url: ${{ steps.create-release.outputs.upload_url }}
+                  asset_path: ./nuget-packages/*.nupkg
+                  asset_name: ApiEndpoint.${{ env.VERSION }}.nupkg
+                  asset_content_type: application/zip
