Update build, test, deploy and release workflow

--- a/.github/workflows/build-test-deploy-release.yml
+++ b/.github/workflows/build-test-deploy-release.yml
@@ -117,6 +117,8 @@ jobs:
                       - Deployment and package publishing for version ${{ github.ref_name }}.
                   draft: false
                   prerelease: false
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
             - name: 📤 Upload Release Asset
               uses: actions/upload-release-asset@v1
