--- a/.github/workflows/build-test-deploy-release.yml
+++ b/.github/workflows/build-test-deploy-release.yml
@@ -128,6 +128,6 @@ jobs:
               uses: actions/upload-release-asset@v1
               with:
                   upload_url: ${{ steps.create-release.outputs.upload_url }}
-                  asset_path: ./*.nupkg
+                  asset_path: ./ApiEndpoint.${{ env.VERSION }}.nupkg
                   asset_name: ApiEndpoint.${{ env.VERSION }}.nupkg
                   asset_content_type: application/zip
