--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -119,6 +119,7 @@ jobs:
             - name: 🏷️ Release Package
               uses: softprops/action-gh-release@v2
               with:
+                  name: Release ${{ github.ref_name }}
                   tag_name: ${{ github.ref_name }}
                   body: |
                       ### What's Changed
@@ -127,25 +128,3 @@ jobs:
                   draft: false
                   prerelease: false
                   token: ${{ secrets.GITHUB_TOKEN }}
-
-            # - name: 🏷️ Create GitHub Release
-            #   id: create-release
-            #   uses: actions/create-release@v1
-            #   with:
-            #       tag_name: ${{ github.ref_name }}
-            #       release_name: Release ${{ github.ref_name }}
-            #       body: |
-            #           ### What's Changed
-            #           - Deployment and package publishing for version ${{ github.ref_name }}.
-            #       draft: false
-            #       prerelease: false
-            #   env:
-            #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-            # - name: 📤 Upload Release Asset
-            #   uses: actions/upload-release-asset@v1
-            #   with:
-            #       upload_url: ${{ steps.create-release.outputs.upload_url }}
-            #       asset_path: ./ApiEndpoint.${{ env.VERSION }}.nupkg
-            #       asset_name: ApiEndpoint.${{ env.VERSION }}.nupkg
-            #       asset_content_type: application/zip
